Adding multiple task support

--- a/public/images.html
+++ b/public/images.html
@@ -9,7 +9,7 @@
 			<article>
 				<h1>Cats!</h1>
 				<img src="http://placekitten.com/g/200/300" />
-				<img src="http://placekitten.com/g/300/300" alt="Some alt attribute" />
+				<img alt="Some alt attribute" src="http://placekitten.com/g/300/300" />
 				<img src="http://placekitten.com/g/400/300" alt="" />
 			</article>
 		</section>
